<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="serif-monospace"
        android:text="LISTA DE CANCIONES"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#E53935"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloCancion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="monospace"
        android:text="Song Title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvCantante"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="Singer"
        android:textColor="#FF4081"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloCancion" />

    <TextView
        android:id="@+id/tvDescripcionCancion"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:text="Description"
        android:textColor="#FF4081"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCantante" />

    <ImageView
        android:id="@+id/IvPlay"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toStartOf="@+id/tvDescripcionCancion"
        app:layout_constraintTop_toBottomOf="@+id/imgvPerfil"
        app:srcCompat="@drawable/boton_reproducir" />

    <ImageView
        android:id="@+id/IvPause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/IvPlay"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toEndOf="@+id/IvStop"
        app:layout_constraintTop_toBottomOf="@+id/imgvPerfil"
        app:srcCompat="@drawable/boton_pausar" />

    <ImageView
        android:id="@+id/IvStop"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvPerfil"
        app:srcCompat="@drawable/boton_detener" />

    <TextView
        android:id="@+id/tvCancion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="44dp"
        android:text="@string/tituloCancion1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/tvCancion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:text="@string/tituloCancion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/tvCancion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/tituloCancion3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/tvCancion4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="84dp"
        android:text="@string/tituloCancion4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/tvCancion5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:text="@string/tituloCancion5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="30dp"
        android:text="@string/separacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IvPause" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="28dp"
        android:text="@string/separacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCancion1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="28dp"
        android:text="@string/separacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCancion2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:text="@string/separacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCancion3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="28dp"
        android:text="@string/separacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCancion4" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgvPerfil"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="#4d4e51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:shapeAppearanceOverlay="@style/roundedImage"
         />

    <ImageView
        android:id="@+id/imgv5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img5" />

    <ImageView
        android:id="@+id/imgv4"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/imgv5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img4" />

    <ImageView
        android:id="@+id/imgv3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imgv4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img3" />

    <ImageView
        android:id="@+id/imgv2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imgv3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img2" />

    <ImageView
        android:id="@+id/imgv1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imgv2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img1" />

</androidx.constraintlayout.widget.ConstraintLayout>